infrastructure/ingress/dev/patches/patch-argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:532673134317:certificate/905d0d16-87e8-4e89-a88c-b6053f472e81"
    external-dns.alpha.kubernetes.io/hostname: dev-argocd.piercuta.com
spec:
  tls:
    - hosts:
        - dev-argocd.piercuta.com
